--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--
+  <script src="./assembly/stats_client_wasm.js" type="module">
+  </script>
+-->
+  <script>
+    const rust = import('./assembly');
+    rust
+      .then(m => {
+        console.log(m);
+        m.process_message("Hello");
+      })
+      .catch(console.error);
+  </script>
 </head>
 <body>
   <app-root></app-root>
